<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#1B263B">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayoutFather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="40dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:padding="4dp"
                android:background="@drawable/style_image_view_logo"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:id="@+id/etTicker"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:hint="@string/digite_o_ticker"
                android:textSize="18sp"
                android:inputType="text|textCapCharacters"
                android:textColor="#212121"
                android:textStyle="bold"
                android:maxLength="6"
                android:padding="16dp"
                android:background="@drawable/style_text_view_ticker"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"/>

            <LinearLayout
                android:id="@+id/linearLayoutChildren"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical"
                android:background="@drawable/style_linear_layout">

                <TextView
                    android:id="@+id/tvShortName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nome_curto"
                    android:textColor="#212121"
                    android:background="@drawable/style_text_view"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:padding="8dp"
                    android:layout_margin="6dp" />

                <TextView
                    android:id="@+id/tvCurrency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/moeda"
                    android:background="@drawable/style_text_view"
                    android:textColor="#212121"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:padding="8dp"
                    android:layout_margin="6dp"/>

                <TextView
                    android:id="@+id/tvMarketPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pre_o_atual"
                    android:textColor="#212121"
                    android:background="@drawable/style_text_view"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:padding="8dp"
                    android:layout_margin="6dp"/>

                <TextView
                    android:id="@+id/tvMarketPreviousClose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fechamento_anterior"
                    android:background="@drawable/style_text_view"
                    android:textColor="#212121"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:layout_margin="6dp"/>

                <TextView
                    android:id="@+id/tvMarketChange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/varia_o_do_dia_moeda"
                    android:background="@drawable/style_text_view"
                    android:textColor="#212121"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:layout_margin="6dp"/>

                <TextView
                    android:id="@+id/tvMarketChangePercent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/varia_o_do_dia"
                    android:background="@drawable/style_text_view"
                    android:textColor="#212121"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:layout_margin="6dp"/>

                <TextView
                    android:id="@+id/tvDayRange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intervalo_do_dia_moeda"
                    android:background="@drawable/style_text_view"
                    android:textColor="#212121"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:layout_margin="6dp"/>

                <TextView
                    android:id="@+id/tvFiftyTwoWeekRange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intervalo_52_semanas_moeda"
                    android:background="@drawable/style_text_view"
                    android:textColor="#212121"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:layout_margin="6dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>